--- a/css/wiki-layout.css
+++ b/css/wiki-layout.css
@@ -1,4 +1,5 @@
 body {
+  box-sizing: border-box;
   font-family: "Noto Sans KR", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
     Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
@@ -70,9 +71,16 @@ article {
 }
 
 div.thumbnail {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); 
+  margin: auto;
   margin-bottom: var(--page-paragraph-margin-y);
+}
+
+.thumbnail img{
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
 }
 
 section::after {
@@ -98,12 +106,12 @@ aside h2 {
 }
 
 .profile-image {
-  background-image: url("https://images.unsplash.com/photo-1618979251882-0b40ef3617f0?q=80&w=2487&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
-  background-size: 100%;
+  background-image: url("../images/mbti.jpeg");
+  background-size: contain;
+  background-repeat: no-repeat;
   background-position: center 100%;
   width: var(--aside-width);
   height: var(--aside-width);
-
   text-indent: -1000rem;
 }
 
@@ -135,6 +143,82 @@ footer {
 
 footer p {
   margin-top: 8px;
+}
+
+.input_container{
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding-left: 11px;
+  border: 1px solid #D8D8D8;
+}
+
+.button_wrap{
+  display: flex;
+  gap: 0;
+  margin-left: auto;
+}
+
+.input_comment{
+  width: 100%;
+  margin-left: 18px;
+  border: none;
+  font-size: 12px;
+}
+
+.input_comment:focus{
+  outline: none;
+}
+
+.comment-writing-container{
+  margin: 24px 0px;
+}
+
+.comment-list{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.comment-author{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 10px;
+}
+
+.comment-author span{
+  font-weight: bold;
+  font-size: 12px;
+}
+
+.comment-content{
+  font-size: 12px;
+}
+
+.comment-item {
+  padding: 8px 16px 24px;
+  border: 1px solid #e9e9e9;
+}
+
+.cancel_button{
+  width: 70px;
+  padding: 12px 24px;
+  border: none;
+  font-size: 12px;
+  font-weight: bold;
+  background-color: #D8D8D8;
+  cursor: pointer;
+}
+
+.add_button{
+  width: 70px;
+  padding: 12px 24px;
+  border: none;
+  font-size: 12px;
+  font-weight: bold;
+  background-color: #D7F9F6;
+  cursor: pointer;
 }
 
 :root {
