style: 책 소개 이미지 가운데 정렬

--- a/css/wiki-layout.css
+++ b/css/wiki-layout.css
@@ -83,6 +83,11 @@ div.thumbnail {
   object-fit: cover;
 }
 
+.thumbnail.book{
+  display: flex;
+  justify-content: center;
+}
+
 section::after {
   content: "";
   display: block;
